:alembic: Experimented with recoil, rendering items and drag and drop

--- a/src/css/Whiteboard.css
+++ b/src/css/Whiteboard.css
@@ -29,5 +29,16 @@
 }
 
 .WhiteboardContainer {
+    position: relative;
     background-color: transparent;
+}
+
+.ActionLayer {
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+
+    /*opacity: 1;*/
+    /*background-color: green;*/
 }
